Archive2/f0/7c47edd56f100a/output
main.cpp: In function 'int main()':
main.cpp:63:13: error: no match for 'operator=' (operand types are 'const Object' and 'Object')
     ob[idx] = targ;
             ^
main.cpp:63:13: note: candidates are:
main.cpp:13:7: note: Object& Object::operator=(const Object&) <near match>
 class Object {
       ^
main.cpp:13:7: note:   no known conversion for implicit 'this' parameter from 'const Object*' to 'Object*'
main.cpp:13:7: note: Object& Object::operator=(Object&&) <near match>
main.cpp:13:7: note:   no known conversion for argument 1 from 'Object' to 'Object&&'
